# sandbox

./: README.md
Data/table/: table_1.mat
Depth-Saliency/: CMakeLists.txt  README.md  main.cpp  saliency.cpp  saliency.h  segmentation.cpp
FASA/: CMakeLists.txt  FASA.cpp  README.md
LOIND/: CMakeLists.txt  loind.cpp  loind.h
Manifold-Saliency/: CMakeLists.txt  PreGraph.cpp  README.md  main.cpp
RGBD-Saliency/: CMakeLists.txt  README.md  fusion.cpp  fusion.h  main.cpp  saliency.cpp  saliency.h  segmentation.cpp  segmentation.h
RGBD-Saliency/depth_saliency/: saliency.cpp  segmentation.cpp  segmentation.h
RGBD-Saliency/rgb_saliency/: PreGraph.cpp  PreGraph.h
RGBD-Segmenter/: README.md
RGBD-Segmenter/v4r/: SegmenterLightTest.h  StructuralRelationsLight.cpp
SLIC-Superpixels/: CMakeLists.txt
VOCUS2-Saliency/: Readme.txt
VOCUS2-Saliency/src/: VOCUS2.cpp  VOCUS2.h  main.cpp
